Minor: Cleanup method